# audiollm-server

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.cursor/rules/: agent-debug-discipline.mdc  api-contract-discipline.mdc  config-design.mdc
backend/: config.json  config.py  debug_dump.py  http_client.py  jobstore.py  main.py  recall_user.py  session.py
backend/asr/: client.py  enrollment.py  fusion.py  itn.py  jobs.py  oneshot.py  prompt_templates.py  recall.py  transcribe.py
backend/asr/k2/: __init__.py  asr.proto  asr_pb2.py  asr_pb2_grpc.py  client.py
backend/audio/: utils.py  vad.py
backend/emotion/: client.py  jobs.py  service.py
backend/emotion_spec/: __init__.py  client.py  jobs.py  prompt.py  service.py
backend/streaming/: __init__.py  audio_stream.py  events.py  k2_stream.py  protocol.py  session.py
backend/tasks/: __init__.py  asr.py  base.py  emotion.py  ts_asr.py
backend/text_cleanup/: __init__.py  client.py
backend/tsasr/: __init__.py  client.py  prompt.py
bench_results/: bench_emotion_jobs_20260520_164952.json  情感识别压测报告.md
deploy/: audiollm-demo.service
docs/: TMGenius语音识别接口-修订版.md  TMGenius语音识别接口-评审版.md  api-reference.md  audio-analyze-api.md  emotion-segmented-streaming-protocol.md  emotion-streaming-protocol.md  public-audio-analyze-api.md  tmgenius-interface-todo.md  transcribe-streaming-protocol.md  transcription-jobs-api.md  transcription-jobs-benchmark.md  tsasr.md  tuling-ast-v3-benchmark.md  tuling-ast-v3-protocol.md
docs/examples/: audio_common.py  http_emotion_job.py  http_transcribe_job.py  rest_upload.py  ws_ast_v3.py  ws_emotion.py  ws_transcribe.py  ws_tsasr.py
frontend/: app-test.js  app.js  asr-test.html  audio-processor.js  audio-upload.js  emotion-app.js  emotion.html  enrollment.js  i18n.js  index.html  router.js  sidebar.js  streaming-text.js  style.css  tailwind.config.js  tailwind.css  tailwind.input.css  tsasr-app.js  tsasr.css  tsasr.html
manual_tests/: .gitignore  README.md
manual_tests/scripts/: test_audio_analyze.py
scripts/: bench_asr_vllm.py  bench_emotion_jobs_http.py  bench_transcribe_jobs.py  bench_tuling_ttft.py  build_tailwind.sh  gen_k2_proto.sh  restart_service.sh  start_vllm_amphion.sh
tests/: test_asr_client_hotwords.py  test_ast_v3_ws_client.py  test_audio_analyze.py  test_bench_asr_vllm.py  test_config.py  test_debug_dump.py  test_emotion_jobs.py  test_emotion_ws_client.py  test_enrollment.py  test_enrollment_api.py  test_hotword_pool_api.py  test_itn.py  test_recall_user_id.py  test_streaming_unit.py  test_transcribe_jobs.py  test_tsasr.py  test_vad.py
