[project]
name = "audiollm-server"
version = "0.1.0"
description = "Real-time audio transcription demo with dual-ASR fusion (Amphion + Qwen) and TEN VAD"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Amphion Team"}]
keywords = ["asr", "speech-recognition", "vllm", "vad", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "grpcio",
    "httpx",
    "numpy",
    "protobuf",
    "python-multipart",
    "pyyaml",
    "ten-vad",
    "tritonclient[http]>=2.69.0",
    "uvicorn[standard]",
    "websockets",
    "wetext>=0.1.2",
]

[project.optional-dependencies]
dev = ["grpcio-tools", "ruff"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.urls]
Homepage = "https://github.com/open-mmlab/Amphion"
Repository = "https://github.com/open-mmlab/Amphion"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["manual_tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"backend/asr/k2/asr_pb2.py" = ["E501", "I001"]
"backend/asr/k2/asr_pb2_grpc.py" = ["E501", "F401", "I001"]
"backend/asr/prompt.py" = ["E501"]
"tests/*" = ["E501"]
# Runnable example scripts favor readable argparse help text over hard wrapping.
"docs/examples/*" = ["E501"]

[tool.ruff.lint.isort]
# audio_common is the shared local helper module under docs/examples/, not a
# third-party package; without this, isort flags every example's import block.
known-first-party = ["audio_common"]
